mongoDB done , UI Done

--- a/.env
+++ b/.env
@@ -1,1 +1,9 @@
-MONDO_URI=mongodb+srv://gurshabad90:VEXEZTSRCqyC9WSx@cluster0.9gf7wh4.mongodb.net/crud_db
+MONGODB_URI =mongodb+srv://gurshabad90:VEXEZTSRCqyC9WSx@cluster0.9gf7wh4.mongodb.net/users
+OLDURI= mongodb+srv://gurshabad90:VEXEZTSRCqyC9WSx@cluster0.9gf7wh4.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+
+OPENAI_API_KEY = sk-proj-GlFBg3hXNgqCTVDvNWXdT3BlbkFJz5IByiLKY4RA5rmY55Ml
+GOOGLE_GENERATIVE_AI_API_KEY=AIzaSyC9TcEpq8NhL1sil-jfst-4c96SDjNnHho
+
+
+NEXTAUTH_URL = http://localhost:3000
+NEXTAUTH_SECRET=UolIgYwGJdJL1uEnymrObSRd00yyO9+hqWt0Um5hF6E=
